@@ -106,6 +106,8 @@ Revision 4.2.5rc2
   supporting UTF-8 initializers.
 - Fix to v1/v2c message processing module which used to refer to a
   bogus stateReference in some cases what causes SNMP engine crashes.
+- Fix to IPv6 transport to zero ZoneID, FlowID and ScopeID components
+  sometimes coming along with incoming packet.
 - Asyncsock sockets now configured with SO_REUSEADDR option to fix possible
   Windows error 10048.
 - Gracefully handle malformed SnmpEngineID at USM coming from SNMPv3 header.
